# build-loop

./: .gitignore  .gitmodules  CLAUDE.md  README.md  package-lock.json  package.json
.claude-plugin/: marketplace.json  plugin.json
hooks/: hooks.json
landing-page/: index.html  serve.py
plugins/build-loop/.claude-plugin/: plugin.json
plugins/build-loop/hooks/: hooks.json
plugins/build-loop/skills/align/: SKILL.md
plugins/build-loop/skills/bootstrap/: SKILL.md
plugins/build-loop/skills/evaluate/: SKILL.md
plugins/build-loop/skills/refine-goal/: SKILL.md
plugins/build-loop/skills/research/: SKILL.md
plugins/build-loop/skills/self-improve/: SKILL.md
project/: .dockerignore  Dockerfile  README.md  pyproject.toml
project/glass/: audit.py  auth.py  calibration.py  config.py  db.py  decomposer.py  generator.py  llm_client.py  logging_config.py  main.py  models.py  pdf_export.py  verifier.py
project/static/: app.js  index.html  style.css
project/tests/: test_audit.py  test_auth.py  test_calibration.py  test_cloud_gate.py  test_db.py  test_generator.py  test_llm_client.py  test_multi_model.py
reference-docs/: architecture.md  hn-feedback-2026-04-05.md  hn-feedback-recheck-2026-04-05.md  hn-feedback-round2-2026-04-05.md  hn-feedback-round3-2026-04-05.md  hn-feedback-round4-2026-04-05.md  principles.md  vision.md
skills/align/: SKILL.md
skills/evaluate/: SKILL.md
skills/refine-evaluation/: SKILL.md
skills/refine-goal/: SKILL.md
skills/research/: SKILL.md
skills/self-improve/: SKILL.md
skills/simplify/: SKILL.md
(+1 files in other folders)
