[project]
name = "glass"
version = "0.1.0"
description = "AI that shows its work — honest by architecture, not by instruction"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
]

[project.optional-dependencies]
claude = ["anthropic>=0.52"]

[tool.setuptools.packages.find]
include = ["glass*"]

[project.scripts]
glass = "glass.main:cli"
